# content

./: .env  .env.example  .pre-commit-config.yaml  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile-setup  README.md  TESTING.md  docker-compose.yml  otel-config.yaml  setup.sh
.github/workflows/: docker.yml  test.yml
core/: Cargo.toml
core/src/: error.rs  http.rs  lib.rs  main.rs  openapi.rs  prefixes.rs  router.rs  router_test.rs  s3.rs  telemetry.rs
core/src/guards/: mod.rs
core/src/guards/snapshots/: content__guards__tests__guard_any_files.snap  content__guards__tests__guard_file_confusion.snap  content_core__guards__tests__guard_any_files.snap  content_core__guards__tests__guard_file_confusion.snap  content_core__guards__tests__guard_happy_path.snap
core/src/healthcheck/snapshots/: content_core__healthcheck__router__tests__mocked_probe.snap
core/src/integrations/: healthcheck.rs  mod.rs
core/src/integrations/snapshots/: content__integrations__s3__show_buckets.snap  content__integrations__s3__show_buckets.snap.new  content_core__integrations__healthcheck__probe_with_real_s3.snap  content_core__integrations__s3__show_buckets.snap
core/src/signed_url/: extractor.rs
core/src/signed_url/snapshots/: content_core__signed_url__service__tests__sign_url.snap
core/src/snapshots/: content_core__http__tests__default_cors_layer.snap  content_core__router_test__tests__status_endpoint.snap
core/src/storage/: router.rs
core/src/storage/handlers/: get_object.rs  get_public_object.rs  mod.rs  put_object.rs
core/src/storage/handlers/snapshots/: content__storage__handlers__put_object__tests__put_object.snap  content_core__storage__handlers__get_object__tests__get_object.snap  content_core__storage__handlers__get_public_object__tests__get_public_object.snap  content_core__storage__handlers__post_object__tests__post_sign_url.snap  content_core__storage__handlers__put_object__tests__put_object.snap
core/src/storage/snapshots/: content__storage__handlers__tests__put_object.snap  content__storage__router__tests__post_sign_url.snap  content__storage__router__tests__put_object.snap  content_core__storage__router__tests__post_sign_url.snap  content_core__storage__router__tests__put_object.snap
core/tests/: integrations.rs
dev/: garage.toml  otel-collector-config.yaml
docs/: book.toml
docs/src/: SUMMARY.md
docs/src/service/: about.md  anatomy.md
helm/content/: Chart.yaml  values.yaml
helm/content/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  httproute.yaml  secret.yaml
setup/: Cargo.toml
setup/src/: main.rs
src/: app.rs  config.rs  error.rs  http.rs  lib.rs  main.rs  openapi.rs  plumbing.rs  router.rs  router_test.rs  s3.rs  signer.rs  telemetry.rs  utils.rs
src/guards/: mod.rs
src/guards/snapshots/: content__guards__tests__handle-2.snap
src/healthcheck/: handlers.rs  router.rs
src/healthcheck/snapshots/: content__healthcheck__router__tests__mocked_probe.snap  content__healthcheck__router__tests__probe_with_real_s3.snap
src/integrations/: s3.rs
src/integrations/snapshots/: content__integrations__healthcheck__probe_with_real_s3.snap
src/it/: mod.rs
src/signed_url/: extractor.rs  service.rs
src/signed_url/snapshots/: content__signed_url__handlers__tests__post_sign_url.snap  content__signed_url__service__tests__sign_url.snap
src/snapshots/: content__http__tests__default_cors_layer.snap  content__http__tests__default_cors_layer_with_wrong_origin-2.snap  content__router_test__tests__status_endpoint.snap  content__s3__tests__show_buckets.snap
src/storage/: handlers.rs  router.rs
src/storage/handlers/: get_object.rs  mod.rs  post_object.rs  put_object.rs
src/storage/handlers/snapshots/: content__storage__handlers__get_object__tests__get_object.snap  content__storage__handlers__post_object__tests__post_sign_url.snap  (+1 more)
src/storage/snapshots/: content__storage__handlers__tests__put_object.snap  content__storage__handlers__tests__put_object_empty_part.snap  content__storage__handlers__tests__put_object_empty_part.snap.new  content__storage__handlers__tests__put_object_empty_request.snap  content__storage__handlers__tests__put_object_empty_request.snap.new  content__storage__router__tests__post_sign_url.snap  content__storage__router__tests__put_object.snap  content__storage__router__tests__put_object.snap.new
tests/: integrations.rs
