[package]
name = "content"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
clap = { version = "4.5.51", features = ["derive", "env"] }
dotenv = { version = "0.15.0", features = ["clap"] }
fmt = "0.1.0"
opentelemetry = { version = "0.31.0"}
opentelemetry-stdout = "0.31.0"
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31.0", features = ["tonic", "grpc-tonic"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors"] }
tracing-opentelemetry = "0.32.0"
tracing-subscriber = {version ="0.3.20", features = ["env-filter"]}
tracing = "0.1.41"
ctrlc = "3.2.0"
global = "0.4.3"
tonic = "0.14.2"
anyhow = "1.0.100"

[dev-dependencies]
insta = { version = "1.43.2", features = ["yaml"] }
axum-test = "18.2.1"
