[workspace]
resolver = "3"
members = ["core", "setup"]

[workspace.package]
edition = "2024"
version = "0.1.0"
authors = ["beep <contact@beep.ovh"]
license = "Apache-2.0"

[workspace.dependencies]
clap = { version = "4.5.51", features = ["derive", "env"] }
base64 = "0.22.1"
reqwest = { version = "0.12.24", features = ["blocking", "json", "native-tls-vendored"] }

