[package]
name = "content_core"
version = "0.1.0"
edition = "2024"
default-run = "content_core"

[dependencies]
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.112.0"
axum = "0.8.6"
dotenv = { version = "0.15.0", features = ["clap"] }
opentelemetry = { version = "0.31.0"}
opentelemetry-stdout = "0.31.0"
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31.0", features = ["tonic", "grpc-tonic"] }
mockall = "0.13.1"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tracing-opentelemetry = "0.32.0"
tracing-subscriber = {version ="0.3.20", features = ["env-filter"]}
tracing = "0.1.41"
global = "0.4.3"
anyhow = "1.0.100"
opentelemetry-semantic-conventions = { version = "0.31.0", features = ["semconv_experimental"] }
tracing-core = "0.1.34"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
hmac = "0.12.1"
sha2 = "0.10.9"
chrono = "0.4.42"
serde_qs = "0.15.0"
http = "1.4.0"
utoipa = "5.4.0"
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
strum_macros = "0.27"
infer = "0.19.0"
clap.workspace = true
base64.workspace = true

[dev-dependencies]
insta = { version = "1.43.2", features = ["yaml"] }
axum-test = { version = "18.2.1", features = ["reqwest"] }
mockall = "0.13.1"
reqwest.workspace = true
